# pl

./: .gitignore  main.c  meson.build
src/: list.c  list.h  std_list.c  std_list.h
tests/: linked_list_test.c  list_test.c  std_list_test.c
